--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,42 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+.subtitle {
+  color: gray;
+}
+
+img {
+  width: 75%;
+  height: 75%;
+}
+
+.galleryPics {
+  display: flex;
+}
+
+.gallery {
+  display: flex;
+}
+
+.titleDescriptionBorder {
+  border: solid 0.1rem gray;
+  padding: 0.5rem;
+}
+
+.titleNCap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  border: solid 0.1rem gray;
+  padding: 1rem 0.5rem -1rem 0.5rem;
+}
+
+h3 {
+  color: #363636;
+}
+
+p {
+  color: gray;
+}
